<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/all_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/all_login_id"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_id"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/all_login_idHint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_id"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/all_login_password"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/all_login_passwordHint" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/all_login_button" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/all_login_register" />

</RelativeLayout>